--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "inclass-extension",
+    "name": "session-saver",
     "version": "1.0",
     "browser_action": {
         "default_title": "In class",
