--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,19 @@
 {
     "manifest_version": 2,
-    "name": "session-saver",
-    "version": "1.0",
+    "name": "Session Saver",
+    "description": "Group tabs together, like nature intended",
+    "version": "1.1",
     "browser_action": {
         "default_title": "In class",
-        "default_popup": "popup.html"
-    },
-    "content_scripts": [
-        {
-            "matches": ["<all_urls>"],
-            "js": ["content.js"]
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "Snail-16.png"
         }
-    ],
-    "background": {
-        "scripts": ["background.js"],
-        "persistent": false
+    },
+    "icons": { 
+        "16": "Snail-16.png",
+        "48": "Snail-48.png",
+        "128": "Snail-128.png" 
     },
     "permissions": [
         "tabs",
